# pkg/api/calculator_grpc.pb.go
@@ -1,121 +1,0 @@
-// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.5.1
-// - protoc             v5.29.3
-// source: api/calculator.proto
-
-package calculator
-
-import (
-	context "context"
-	grpc "google.golang.org/grpc"
-	codes "google.golang.org/grpc/codes"
-	status "google.golang.org/grpc/status"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.64.0 or later.
-const _ = grpc.SupportPackageIsVersion9
-
-const (
-	URLService_Calculate_FullMethodName = "/calculator.URLService/Calculate"
-)
-
-// URLServiceClient is the client API for URLService service.
-//
-// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-type URLServiceClient interface {
-	Calculate(ctx context.Context, in *CalculateRequest, opts ...grpc.CallOption) (*CalculateResponse, error)
-}
-
-type uRLServiceClient struct {
-	cc grpc.ClientConnInterface
-}
-
-func NewURLServiceClient(cc grpc.ClientConnInterface) URLServiceClient {
-	return &uRLServiceClient{cc}
-}
-
-func (c *uRLServiceClient) Calculate(ctx context.Context, in *CalculateRequest, opts ...grpc.CallOption) (*CalculateResponse, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
-	out := new(CalculateResponse)
-	err := c.cc.Invoke(ctx, URLService_Calculate_FullMethodName, in, out, cOpts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-// URLServiceServer is the server API for URLService service.
-// All implementations must embed UnimplementedURLServiceServer
-// for forward compatibility.
-type URLServiceServer interface {
-	Calculate(context.Context, *CalculateRequest) (*CalculateResponse, error)
-	mustEmbedUnimplementedURLServiceServer()
-}
-
-// UnimplementedURLServiceServer must be embedded to have
-// forward compatible implementations.
-//
-// NOTE: this should be embedded by value instead of pointer to avoid a nil
-// pointer dereference when methods are called.
-type UnimplementedURLServiceServer struct{}
-
-func (UnimplementedURLServiceServer) Calculate(context.Context, *CalculateRequest) (*CalculateResponse, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method Calculate not implemented")
-}
-func (UnimplementedURLServiceServer) mustEmbedUnimplementedURLServiceServer() {}
-func (UnimplementedURLServiceServer) testEmbeddedByValue()                    {}
-
-// UnsafeURLServiceServer may be embedded to opt out of forward compatibility for this service.
-// Use of this interface is not recommended, as added methods to URLServiceServer will
-// result in compilation errors.
-type UnsafeURLServiceServer interface {
-	mustEmbedUnimplementedURLServiceServer()
-}
-
-func RegisterURLServiceServer(s grpc.ServiceRegistrar, srv URLServiceServer) {
-	// If the following call pancis, it indicates UnimplementedURLServiceServer was
-	// embedded by pointer and is nil.  This will cause panics if an
-	// unimplemented method is ever invoked, so we test this at initialization
-	// time to prevent it from happening at runtime later due to I/O.
-	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
-		t.testEmbeddedByValue()
-	}
-	s.RegisterService(&URLService_ServiceDesc, srv)
-}
-
-func _URLService_Calculate_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(CalculateRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(URLServiceServer).Calculate(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: URLService_Calculate_FullMethodName,
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(URLServiceServer).Calculate(ctx, req.(*CalculateRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-// URLService_ServiceDesc is the grpc.ServiceDesc for URLService service.
-// It's only intended for direct use with grpc.RegisterService,
-// and not to be introspected or modified (even as a copy)
-var URLService_ServiceDesc = grpc.ServiceDesc{
-	ServiceName: "calculator.URLService",
-	HandlerType: (*URLServiceServer)(nil),
-	Methods: []grpc.MethodDesc{
-		{
-			MethodName: "Calculate",
-			Handler:    _URLService_Calculate_Handler,
-		},
-	},
-	Streams:  []grpc.StreamDesc{},
-	Metadata: "api/calculator.proto",
-}
